force-app/main/default/objects/pymtTest__Payment_Gateway__c/pymtTest__Payment_Gateway__c.object-meta.xml
<CustomObject>
    <description>Stores payment gateway configurations for different payment processors</description>
    <label>Payment Gateway</label>
    <nameField>
        <label>Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>