force-app/main/default/objects/pymtTest__Payment_Gateway__c/fields/pymtTest__Environment__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Environment__c</fullName>
    <description>Indicates whether this gateway uses test or live credentials</description>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
                <default>true</default>
                <label>Test</label>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>