force-app/main/default/objects/pymtTest__Payment_Gateway__c/fields/pymtTest__Gateway_Type__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Gateway_Type__c</fullName>
    <description>The type of payment gateway</description>
    <label>Gateway Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
            <value>
                <fullName>CyberSource</fullName>
            </value>
            <value>
                <fullName>Placetopay</fullName>
                <label>Placetopay (Evertec)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>