force-app/main/default/objects/pymtTest__Payment_Gateway__c/fields/pymtTest__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the default gateway for the org</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>